# RooUnfold

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  GNUmakefile  History  README  README.md
ci/: before_install.sh  install.sh  run_tests.sh  test.sh
cmake/Modules/: FindROOT.cmake  MacroCheckPackageLibs.cmake  MacroCheckPackageVersion.cmake  MacroRootDict.cmake  README.md
doc/: bayes_errors.tex
doc/bayes_errors/: bayes_errors.tex
doc/phystat2011/: phystat2011_adye.tex
doc/unfolding2010/: adye_tim.tex
eclipse/: .cproject  .cproject.linux  .project
examples/: ArgVar.h  ArgVars.h  ArgVars.icc  RooUnfoldDagostini.cxx  RooUnfoldDagostini.h  RooUnfoldExample.cxx  RooUnfoldExample.py  RooUnfoldTest.cxx  RooUnfoldTest2D.cxx  RooUnfoldTest3D.cxx  RooUnfoldTestArgs.icc  RooUnfoldTestHarness.h  RooUnfoldTestHarness.icc  RooUnfoldTestHarness2D.h  RooUnfoldTestHarness2D.icc  RooUnfoldTestHarness3D.h  RooUnfoldTestHarness3D.icc  RooUnfoldTestPdf.icc  RooUnfoldTestPdfRooFit.icc
include/: RooUnfoldBayes.h  RooUnfoldResponse.h  RooUnfoldSvd.h  RooUnfoldUtils.h  RooUnfold_LinkDef.h  TSVDUnfold_local.h  TauSVDUnfold.h
src/: Array2D.cxx  Array2D.h  RooUnfHistoSvd.cxx  RooUnfHistoSvd.h  RooUnfold.cxx  RooUnfold.h  RooUnfoldAll.cxx  RooUnfoldAll.h  RooUnfoldBayes.cxx  RooUnfoldBayes.h  RooUnfoldBayesImpl.cxx  RooUnfoldBayesImpl.h  RooUnfoldBinByBin.cxx  RooUnfoldBinByBin.h  RooUnfoldBinByBinOld.cxx  RooUnfoldBinByBinOld.h  RooUnfoldDagostini.cxx  RooUnfoldDagostini.h  RooUnfoldErrors.cxx  RooUnfoldErrors.h  RooUnfoldInvert.cxx  RooUnfoldInvert.h  RooUnfoldParms.cxx  RooUnfoldParms.h  RooUnfoldResponse.cxx  RooUnfoldResponse.h  RooUnfoldSvd.cxx  RooUnfoldSvd.h  RooUnfoldTUnfold.cxx  RooUnfoldTUnfold.h  RooUnfoldUtils.cxx  RooUnfold_LinkDef.h  TSVDUnfold_local.cxx  TauSVDUnfold.cxx
test/: TauSVDUnfoldTests.cpp  TestRooUnfoldSvd.cpp  TestTVectorD.cpp  TestTauSVDUnfold.cpp  TestUtils.cpp  boost_test.cpp  simpletest.cpp  test_pyroot.py
